--- a/src/BUILD.bazel
+++ b/src/BUILD.bazel
@@ -1,6 +1,7 @@
 cc_binary(
     name = "signed_to_unsigned",
     srcs = glob(["*.cpp"]),
+    linkopts = ["-lpthread"],
     deps = [
         "//lib:lib"
     ]
